# mplsoccer

./: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  environment-dev.yml  environment-docs.yml  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  wyscout_event_tags.json  wyscout_statsbomb_overlap.csv
demos/: 00-Pitch.ipynb  05-Plotting-kdeplot.ipynb  06-Plotting-jointplot.ipynb  07-Plotting-hexbin.ipynb  09-Plotting-animation.ipynb  demo.ipynb  demo_animation.ipynb  demo_plotting.ipynb  environment.yml
docs/: 00-Pitch.ipynb  01-Pitch.ipynb  04-Plotting-Arrows.ipynb  05-Plotting-kdeplot.ipynb  06-Plotting-jointplot.ipynb  08-Plotting-heatmap.ipynb  09-Plotting-animation.ipynb  plot_text.md  radar_chart.md  requirements.txt
docs/source/: .index.rst.swp  api.rst  basics.rst  conf.py  index.rst  installation.rst  modules.rst  mplsoccer.bumpy_chart.rst  mplsoccer.grid.rst  mplsoccer.linecollection.rst  mplsoccer.pitch.rst  mplsoccer.py_pizza.rst  mplsoccer.quiver.rst  mplsoccer.radar_chart.rst  mplsoccer.rst  mplsoccer.scatterutils.rst  mplsoccer.soccer.pitch.rst  mplsoccer.soccer.statsbomb.rst  mplsoccer.statsbomb.rst  mplsoccer.text.rst  mplsoccer.utils.rst
examples/: README.rst  plot_arrows.py  plot_kde.py  plot_lines.py  plot_lines_cmap.py  plot_logo.py
examples/basics/: README.rst
examples/bumpy_charts/: README.rst  epl.json  percentile.json  plot_bumpy.py
examples/heatmaps/: README.rst
examples/misc/: README.rst  plot_logo.py
examples/passes/: README.rst  plot_lines_cmap.py
examples/photos/: README.rst
examples/pitch_plots/: README.rst  plot_animation.py  plot_arcs_around_goals.py  plot_arrows.py  plot_cmap.py  plot_convex_hull.py  plot_cyberpunk.py  plot_delaunay.py  plot_direction_arrow.py  plot_fbref.py  plot_flow.py  plot_football_markers.py  plot_formations.py  plot_grid.py  plot_heatmap.py  plot_heatmap_gaussian.py  plot_heatmap_positional.py  plot_hexbin.py  plot_inset_axes.py  plot_jointgrid.py  plot_kde.py  plot_lines.py  plot_lines_cmap.py  plot_lines_lw_color.py  plot_markers.py  plot_pass_network.py  plot_photo.py  plot_position_and_formations.py  plot_rotated_markers.py  plot_sb360_frame.py  plot_scatter.py  plot_scatterdensity.py  plot_shot_freeze_frame.py  plot_sonar.py  plot_standardize.py  plot_stream_events.py  plot_textured_background.py  plot_twitter_powerpoint.py  plot_voronoi.py  plot_xt.py
examples/pitch_setup/: README.rst  pitch_types.ipynb  plot_compare_pitches.py  plot_explain_standardizer.py  plot_mplsoccer_logo.py  plot_pitch_types.py  plot_pitches.py  plot_quick_start.py
examples/pizza_plots/: README.rst  plot_pizza.py  plot_pizza_basic.py  plot_pizza_colorful.py  plot_pizza_comparison.py  plot_pizza_comparison_vary_scales.py  plot_pizza_curved_params.py  plot_pizza_dark_theme.py  plot_pizza_different_units.py  plot_pizza_scales_vary.py
examples/plots/: README.rst  bumpy_chart.md  plot_animation.py  plot_arrows.py  plot_fbref.py  plot_flow.py  plot_football_markers.py  plot_heatmap.py  plot_heatmap_gaussian.py  plot_heatmap_positional.py  plot_hexbin.py  plot_joint_plot.py  plot_kde.py  plot_lines.py  plot_lines_cmap.py  plot_lines_lw_color.py  plot_pass_flow.py  plot_pass_network.py  plot_photo.py  plot_rotated_markers.py  plot_scatter.py  plot_shot_freeze_frame.py  plot_twitter_powerpoint.py  plot_voronoi.py
examples/radar/: README.rst  plot_radar.py  plot_turbine.py  radar_chart.md  radar_new_examples.py
examples/radar_chart/: radar.ipynb
examples/shots/: README.rst
examples/sonars/: README.rst  plot_bin_statistic_sonar.py  (+2 more)
fbplot/: Pitch-Copy1.ipynb  Pitch.ipynb  pitch.py
mplsoccer/: __init__.py  _dimensions_base.py  _pitch_base.py  _pitch_plot.py  bumpy_chart.py  cm.py  curved_text.py  demo.ipynb  demo_animation.ipynb  dimensions.py  draw_football_work_in_progress.ipynb  expanding lines.ipynb  formations.py  grid.py  heatmap.py  linecollection.py  pitch.py  py_pizza.py  quiver.py  radar_chart.py  scatterutils.py  speedometer.py  statsbomb.py  text.py  utils.py
soccerplots/: radar_chart.py  utils.py
tests/: conftest.py  football_marker_legend.ipynb  test_bin_statistic.py  test_grid.py  test_pizza_curved_labels.py  test_radar_curved_labels.py  test_speedometer.py  test_standarizer.py
(+45 files in other folders)
