[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplsoccer"
description = 'Football pitch plotting library for matplotlib'
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
license = "MIT"
keywords = [
  "football",
  "soccer",
  "matplotlib",
  "mplsoccer",
  "visualization",
]
authors = [
  { name = "Andrew Rowlinson", email = "rowlinsonandy@gmail.com" },
  { name = "Anmol Durgapal", email = "slothfulwave10@gmail.com" },
]
classifiers = [
  "Framework :: Matplotlib",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ['matplotlib >= 3.6',
                'numpy',
                'pandas',
                'Pillow',
                'requests',
                'scipy',
                'seaborn',
				]

[project.urls]
Documentation = "https://mplsoccer.readthedocs.io"
Issues = "https://github.com/andrewRowlinson/mplsoccer/issues"
Source = "https://github.com/andrewRowlinson/mplsoccer"

[tool.hatch.version]
path = "mplsoccer/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=temporary --cov=tests"
no-cov = "cov --no-cov"

[dependency-groups]
docs = ['adjustText',
        'cmasher',
        'highlight-text',
        'kloppy',
        'lxml',
        'numpydoc',
        'pyarrow',
        'Sphinx',
        'sphinx-gallery',
        'sphinx-rtd-theme',
]
dev = ['grayskull',
       'hatch',
       'jupyterlab',
       'pylint',
       'pytest',
]

[tool.uv]
default-groups = ['docs']

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311", "312", "313", "314"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "mplsoccer/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
